chore(lazygit): optimize

--- a/lazygit/.config/lazygit/config.yml
+++ b/lazygit/.config/lazygit/config.yml
@@ -4,3 +4,4 @@ customCommands:
     context: "commits"
     command: 'git commit --allow-empty -m "chore: empty commit to trigger automation"'
     loadingText: "Committing empty commit..."
+promptToReturnFromSubprocess: false
